style: fix the white space gap on 768px screen sizes for AboutBackgroundImage

--- a/src/Components/Footer/FooterSubscribeSection/FooterSubscribeSection.module.scss
+++ b/src/Components/Footer/FooterSubscribeSection/FooterSubscribeSection.module.scss
@@ -49,6 +49,7 @@
 
 .subEmailForm>label {
   display: block;
+  cursor: pointer;
   margin-bottom: 32px;
 }
 
