--- a/src/Components/Pages/About/AboutBackgroundImage.jsx/AboutBackgroundImage.module.scss
+++ b/src/Components/Pages/About/AboutBackgroundImage.jsx/AboutBackgroundImage.module.scss
@@ -15,6 +15,8 @@
   .wrapper {
     min-height: auto;
     max-height: auto;
+    position: relative;
+    top: 4px;
   }
 }
 
